# mm-8004-backend

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  llms.txt  skill.md
abi/: MoltMarketplace.json
migrations/: 001_agents.sql  002_feedbacks.sql  003_feedback_responses.sql  004_activity_log.sql  005_indexer_state.sql  006_indexer_state_contract_name.sql  007_add_block_timestamps.sql  008_backfill_agent_owners.sql  009_marketplace.sql  010_add_missing_indexes.sql
scripts/: sync-from-supabase.sh
src/: main.rs
src/api/: activity.rs  agents.rs  leaderboard.rs  marketplace.rs  mod.rs  stats.rs
src/db/: activity.rs  agents.rs  feedbacks.rs  indexer_state.rs  marketplace.rs  mod.rs
src/indexer/: backfill.rs  identity.rs  marketplace.rs  metadata.rs  mod.rs  provider.rs  reputation.rs
src/types/: mod.rs
tests/: api_tests.rs  indexer_tests.rs
